--- a/BirthdayCard/app/src/main/res/values/strings.xml
+++ b/BirthdayCard/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BirthdayCard</string>
+    <string name="happy_birthday_text">Happy Birthday, Jason!</string>
+    <string name="signature_text">From Penny.</string>
 </resources>
